# Scholar2Podcast

./: .gitignore  README.md  feed.xml  index.html  pyproject.toml
.github/workflows/: process-scholar.yml
episodes/: The Bible, Theology, and the Christ Figures in Film Session 1 - Film Theory Part 1.json  The Bible, Theology, and the Christ Figures in Film Session 1 - Film Theory Part 2.json  The Bible, Theology, and the Christ Figures in Film Session 2 - Jesus Films Part 1 continued.json  The Bible, Theology, and the Christ Figures in Film Session 2 - Jesus Films Part 1.json  The Bible, Theology, and the Christ Figures in Film Session 3 - Jesus Films Part 2 continued.json  The Bible, Theology, and the Christ Figures in Film Session 3 - Jesus Films Part 2.json  The Bible, Theology, and the Christ Figures in Film Session 4 - Christ - Figure Films Part 2.json
src/scholar2podcast/: __init__.py  __main__.py  cli.py  converter.py  downloader.py  feed.py  metadata.py  site.py
tests/: test_converter.py  test_downloader.py  test_feed.py  test_metadata.py  test_site.py
